--- a/molecule/podman/molecule.yml
+++ b/molecule/podman/molecule.yml
@@ -12,7 +12,7 @@ lint:
     config-file: molecule/shared/yamllint.yml
 platforms:
   - name: updates-default
-    image: ${MOLECULE_DIST:-"jam82/ubuntu-molecule:18.04"}
+    image: ${MOLECULE_DIST:-"jam82/oracle-molecule:8"}
     command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     tty: True
