--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 ---
+# role: ansible-role-updates
 # file: .travis.yml
 
 language: python
@@ -11,17 +12,18 @@ services: docker
 
 env:
   matrix:
-    - MOLECULE_DIST: 'jam82/centos-molecule:7'
-    - MOLECULE_DIST: 'jam82/centos-molecule:8'
-    - MOLECULE_DIST: 'jam82/debian-molecule:9'
-    - MOLECULE_DIST: 'jam82/debian-molecule:10'
-    - MOLECULE_DIST: 'jam82/oracle-molecule:7'
-    - MOLECULE_DIST: 'jam82/oracle-molecule:8'
-    - MOLECULE_DIST: 'jam82/ubuntu-molecule:16.04'
-    - MOLECULE_DIST: 'jam82/ubuntu-molecule:18.04'
+    - MOLECULE_DIST: 'jam82/molecule-alpine:latest'
+    - MOLECULE_DIST: 'jam82/molecule-centos:7'
+    - MOLECULE_DIST: 'jam82/molecule-centos:8'
+    - MOLECULE_DIST: 'jam82/molecule-debian:9'
+    - MOLECULE_DIST: 'jam82/molecule-debian:10'
+    - MOLECULE_DIST: 'jam82/molecule-oracle:7'
+    - MOLECULE_DIST: 'jam82/molecule-oracle:8'
+    - MOLECULE_DIST: 'jam82/molecule-ubuntu:18.04'
+    - MOLECULE_DIST: 'jam82/molecule-ubuntu:20.04'
 
 install:
-  - pip install testinfra molecule docker
+  - pip install ansible-lint docker flake8 molecule testinfra yamllint
 
 script:
   - molecule --version
