--- a/molecule/kvm/molecule.yml
+++ b/molecule/kvm/molecule.yml
@@ -4,46 +4,47 @@
 
 dependency:
   name: galaxy
+  options:
+    role-file: molecule/resources/roles/requirements.yml
 driver:
   name: vagrant
   provider:
     name: libvirt
     type: libvirt
     options:
-      memory: 1024
-      cpus: 1
-lint:
-  name: yamllint
-  options:
-    config-file: molecule/shared/yamllint.yml
+      memory: 2048
+      cpus: 2
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
+  flake8
 platforms:
+  - name: updates-arch
+    box: "archlinux/archlinux"
   - name: updates-centos8
     box: "centos/8"
   - name: updates-debian10
     box: "debian/buster64"
+  - name: updates-fedora31
+    box: "fedora/31-cloud-base"
   - name: updates-ubuntu1804
     box: "generic/ubuntu1804"
 provisioner:
   name: ansible
   log: True
-  lint:
-    name: ansible-lint
   playbooks:
-    prepare: prepare.yml
-    converge: ../shared/playbook.yml
+    prepare: ../resources/playbooks/prepare.yml
+    converge: ../resources/playbooks/converge.yml
   inventory:
     group_vars:
       all:
-        updates_enabled: True
-scenario:
-  name: kvm
+        updates_role_enabled: True
 verifier:
   name: testinfra
   env:
     PYTHONWARNINGS: "ignore"
-  directory: ../tests
+  directory: ../resources/tests
   options:
     v: True
     sudo: True
-  lint:
-    name: flake8
