--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -4,7 +4,7 @@
 
 # The role is disabled by default, so you do not get in trouble.
 # Checked in tasks/main.yml which includes tasks.yml if enabled.
-updates_enabled: False
+updates_role_enabled: False
 
 # download upgradeable packages
 updates_download: True
