--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
     - MOLECULE_DIST: 'jam82/molecule-centos:8'
     - MOLECULE_DIST: 'jam82/molecule-debian:9'
     - MOLECULE_DIST: 'jam82/molecule-debian:10'
-    - MOLECULE_DIST: 'jam82/molecule-oracle:7'
-    - MOLECULE_DIST: 'jam82/molecule-oracle:8'
+    - MOLECULE_DIST: 'jam82/molecule-oraclelinux:7'
+    - MOLECULE_DIST: 'jam82/molecule-oraclelinux:8'
     - MOLECULE_DIST: 'jam82/molecule-ubuntu:18.04'
     - MOLECULE_DIST: 'jam82/molecule-ubuntu:20.04'
 
