--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -12,22 +12,9 @@ lint: |
   ansible-lint
   flake8
 platforms:
-  - name: updates-alpine311
-    image: "jam82/molecule-alpine:3.11"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
-  - name: updates-alpine
-    image: "jam82/molecule-alpine:latest"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
   - name: updates-amazon
     image: "jam82/molecule-amazonlinux:latest"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -35,24 +22,9 @@ platforms:
       - /run
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-arch
-    image: "jam82/molecule-archlinux:latest"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-centos6
-    image: "jam82/molecule-centos:6"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
   - name: updates-centos7
     image: "jam82/molecule-centos:7"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -62,6 +34,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-centos8
     image: "jam82/molecule-centos:8"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -71,6 +44,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-debian9
     image: "jam82/molecule-debian:9"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -80,6 +54,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-debian10
     image: "jam82/molecule-debian:10"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -89,6 +64,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-debian
     image: "jam82/molecule-debian:latest"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -96,8 +72,9 @@ platforms:
       - /run
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-opensuse15
-    image: "jam82/molecule-opensuse:15"
+  - name: updates-fedora
+    image: "jam82/molecule-fedora:latest"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -105,33 +82,9 @@ platforms:
       - /run
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-suse
-    image: "jam82/molecule-opensuse:latest"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-suse-tumbleweed
-    image: "jam82/molecule-opensuse:tumbleweed"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: updates-oracle6
-    image: "jam82/molecule-oraclelinux:6"
-    pre_build_image: True
-    privileged: True
-    tmpfs:
-      - /tmp
-      - /run
   - name: updates-oracle7
     image: "jam82/molecule-oraclelinux:7"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -141,6 +94,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-oracle8
     image: "jam82/molecule-oraclelinux:8"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -150,6 +104,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-oracle
     image: "jam82/molecule-oraclelinux:latest"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -159,6 +114,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-ubuntu1604
     image: "jam82/molecule-ubuntu:16.04"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -168,6 +124,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-ubuntu1804
     image: "jam82/molecule-ubuntu:18.04"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
@@ -177,6 +134,7 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - name: updates-ubuntu
     image: "jam82/molecule-ubuntu:latest"
+    command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
     tmpfs:
