--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,7 +13,7 @@ lint: |
   flake8
 platforms:
   - name: updates-default
-    image: ${MOLECULE_DIST:-"jam82/molecule-ubuntu:18.04"}
+    image: ${MOLECULE_DIST:-"jam82/molecule-amazonlinux:2"}
     command: ${MOLECULE_DOCKER_CMD:-""}
     pre_build_image: True
     privileged: True
