--- a/.travis.yml
+++ b/.travis.yml
@@ -5,26 +5,30 @@
 language: python
 
 python:
-  - "2.7"
-  - "3.6"
+  - "3.9"
 
 services: docker
 
+branches:
+  only:
+    - main
+
 env:
-  matrix:
-    - MOLECULE_DIST: 'jam82/molecule-centos:7'
-    - MOLECULE_DIST: 'jam82/molecule-centos:8'
-    - MOLECULE_DIST: 'jam82/molecule-debian:9'
-    - MOLECULE_DIST: 'jam82/molecule-debian:10'
-    - MOLECULE_DIST: 'jam82/molecule-oraclelinux:7'
-    - MOLECULE_DIST: 'jam82/molecule-oraclelinux:8'
-    - MOLECULE_DIST: 'jam82/molecule-ubuntu:18.04'
-    - MOLECULE_DIST: 'jam82/molecule-ubuntu:20.04'
+  global:
+    - TOX_PARALLEL_NO_SPINNER=1
+  jobs:
+    - TOX_IMG="Amazon"    TOX_ANSIBLE="{29,210}"
+    - TOX_IMG="CentOS"    TOX_ANSIBLE="{29,210}"
+    - TOX_IMG="Debian"    TOX_ANSIBLE="{29,210}"
+    - TOX_IMG="Fedora"    TOX_ANSIBLE="{29,210}"
+    - TOX_IMG="Oracle"    TOX_ANSIBLE="{29,210}"
+    - TOX_IMG="Ubuntu"    TOX_ANSIBLE="{29,210}"
+
+before_install:
+  - python -m pip install --upgrade pip
 
 install:
-  - pip install ansible-lint docker flake8 molecule testinfra yamllint
+  - pip install tox-travis
 
 script:
-  - molecule --version
-  - ansible --version
-  - molecule test
+  - tox -e $(echo py${TRAVIS_PYTHON_VERSION} | tr -d .)-an${TOX_ANSIBLE}-${TOX_IMG} -p
