--- a/molecule/resources/playbooks/converge.yml
+++ b/molecule/resources/playbooks/converge.yml
@@ -4,9 +4,7 @@
 
 - name: Converge
   hosts: all
-  become: True
-  pre_tasks:
-    - name: "Include variables to converge playbook"
-      include_vars: vars.yml
+  become: true
+  gather_facts: true
   roles:
-    - role: ansible-role-updates
+    - role: '../ansible-role-updates'
