--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,9 +3,9 @@
 # file: meta/main.yml
 
 galaxy_info:
-  role_name: ansible-role-updates
+  role_name: updates
   author: jam82
-  description: Ansible role for setting up updates.
+  description: Ansible role for setting up automatic updates.
   company: ''
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -14,50 +14,26 @@ galaxy_info:
 
   license: MIT
 
-  min_ansible_version: 2.8
-
-  # If this a Container Enabled role, provide the minimum Ansible Container version.
-  # min_ansible_container_version:
-
-  github_branch: master
+  min_ansible_version: "2.9"
 
   # platforms is a list of platforms, and each platform has a name and a list of versions.
-  #
   platforms:
-    - name: Alpine
+    - name: Amazon Linux 2
       versions:
-        - 3.10
-        - 3.11
-    - name: Amazon
+        - any
+    - name: EL
       versions:
-        - 2
-    - name: Archlinux
-    - name: CentOS
-      versions:
-        - 7
-        - 8
+        - any
     - name: Debian
       versions:
-        - 9
-        - 10
+        - any
     - name: Fedora
       versions:
-        - 31
-    - name: Oracle
-      versions:
-        - 7
-        - 8
-    - name: Suse
-      versions:
-        - 15
+        - any
     - name: Ubuntu
       versions:
-        - 18.04
-        - 20.04
+        - any
 
   galaxy_tags: []
 
-  dependencies:
-    - src: https://github.com/jam82/ansible-role-common.git
-      name: common
-      version: master
+dependencies: []
