--- a/molecule/kvm/molecule.yml
+++ b/molecule/kvm/molecule.yml
@@ -16,37 +16,37 @@ lint: |
   set -e
   yamllint .
   ansible-lint
-  flake8
 platforms:
-  - name: updates-centos7
+  - name: centos7-updates
     box: "centos/7"
-  - name: updates-centos8
+  - name: centos8-updates
     box: "centos/8"
-  - name: updates-debian9
+  - name: debian9-updates
     box: "debian/stretch64"
-  - name: updates-debian10
+  - name: debian10-updates
     box: "debian/buster64"
-  - name: updates-fedora31
-    box: "fedora/31-cloud-base"
-  - name: updates-oracle7
+  - name: debian11-updates
+    box: "debian/bullseye64"
+  - name: fedora33-updates
+    box: "fedora/33-cloud-base"
+  - name: oracle7-updates
     box: "generic/oracle7"
-  - name: updates-oracle8
+  - name: oracle8-updates
     box: "centos/oracle8"
-  - name: updates-ubuntu1804
+  - name: ubuntu1804-updates
     box: "generic/ubuntu1804"
-  - name: updates-ubuntu2004
+  - name: ubuntu2004-updates
     box: "generic/ubuntu2004"
 provisioner:
   name: ansible
-  log: True
+  log: true
   playbooks:
     prepare: ../resources/playbooks/prepare.yml
     converge: ../resources/playbooks/converge.yml
+    verify: ../resources/playbooks/verify.yml
+  inventory:
+    group_vars:
+      all:
+        updates_role_enabled: true
 verifier:
-  name: testinfra
-  env:
-    PYTHONWARNINGS: "ignore"
-  directory: ../resources/tests
-  options:
-    v: True
-    sudo: True
+  name: ansible
