--- a/.travis.yml
+++ b/.travis.yml
@@ -2,33 +2,20 @@
 # role: ansible-role-updates
 # file: .travis.yml
 
+os: linux
+dist: focal
+
 language: python
-
-python:
-  - "3.9"
-
-services: docker
 
 branches:
   only:
     - main
 
-env:
-  global:
-    - TOX_PARALLEL_NO_SPINNER=1
-  jobs:
-    - TOX_IMG="Amazon"    TOX_ANSIBLE="{209,210,211}"
-    - TOX_IMG="CentOS"    TOX_ANSIBLE="{209,210,211}"
-    - TOX_IMG="Debian"    TOX_ANSIBLE="{209,210,211}"
-    - TOX_IMG="Fedora"    TOX_ANSIBLE="{209,210,211}"
-    - TOX_IMG="Oracle"    TOX_ANSIBLE="{209,210,211}"
-    - TOX_IMG="Ubuntu"    TOX_ANSIBLE="{209,210,211}"
-
 before_install:
   - python -m pip install --upgrade pip
 
 install:
-  - pip install tox-travis
+  - pip install ansible yamllint ansible-lint
 
 script:
-  - tox -e $(echo py${TRAVIS_PYTHON_VERSION} | tr -d .)-an${TOX_ANSIBLE}-${TOX_IMG} -p
+  - ansible-lint
